# Practice1

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tests_main.cpp
src/: CMakeLists.txt  solution.cpp  solution.h
tests/: tests.cpp
